Implementierung von Schadenberichten

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,11 @@
          <div class="checkbox mb-3">
   </div>
   <button style="background-color: #00CE7F;"
-  class="w-100 btn btn-lg btn-primary" type="submit" fdprocessedid="5a0sq">Sign in</button>
+  class="w-100 btn btn-lg btn-primary" type="submit" fdprocessedid="5a0sq">Login</button>
         </form>
+        <hr>
+        <button  class="w-100 btn btn-lg btn-primary" (click)="getUsers()">Liste</button>
   </div>
+ 
+   
 </div>
