--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,36 @@
-<hr>
-<div class="d-flex justify-content-center mt-5">
-  <div class="col-3">
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-signin">
-        <img class="mb-4" src="/assets/logo_damagify.png" alt="" width="72" height="57">
-          <div class="text-center mb-4">
-            <h1 class="h3 mb-3 font-weight-normal">Login</h1>
-          </div>
-          <p>E-Mail</p>
-          <div class="form-floating mb-3">
-            <input type="email" formControlName="email" id="floatingInput" class="form-control" placeholder="name@example.com">
-            <label for="floatingInput">E-mail eingeben</label>
-          </div>
-          <p>Password</p>
-          <div class="form-floating">
-            <input type="password" class="form-control" formControlName="password" id="floatingPassword" class="form-control" placeholder="Password">
-            <label for="floatingPassword">Password eingeben</label>
-          </div>
-         <div class="checkbox mb-3">
-  </div>
-  <button style="background-color: #00CE7F;"
-  class="w-100 btn btn-lg btn-primary" type="submit" fdprocessedid="5a0sq">Login</button>
-        </form>
-        <hr>
-        <button  class="w-100 btn btn-lg btn-primary" (click)="getUsers()">Liste</button>
-  </div>
- 
-   
+<div class="container-fluid p-5 mb-5" style="height: 70px">
+  <nav class="navbar navbar-expand-md fixed-top">
+      <div class="container-fluid" style="background-color: #00CE7F">
+          <img class=" align-content-center mt-3 mb-3" src="/assets/logo_damagify_text.png" alt="" height="40">
+      </div>
+  </nav>
 </div>
+<h5 class="text-center">Willkommen bei Damagify</h5>
+<div class="container border" style="width: 400px; height: 600px; background-color:aliceblue;">
+  <div class="col-3 m-5">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-signin">
+      <div class="align-content-center m-5">
+        <img class=" rounded-circle mb-5 mt-1 m-5" src="/assets/logo_damagify.png" alt="" width="90"
+        height="90">
+      </div>
+      <p>E-Mail</p>
+      <div class="form-floating mb-4" style="width: 300px;">
+        <input type="email" formControlName="email" id="floatingInput" class="form-control"
+          placeholder="name@example.com">
+        <label for="floatingInput">E-mail eingeben</label>
+      </div>
+      <p>Password</p>
+      <div class="form-floating mb-4"  style="width: 300px;">
+        <input type="password" class="form-control" formControlName="password" id="floatingPassword"
+          class="form-control" placeholder="Password">
+        <label for="floatingPassword">Password eingeben</label>
+      </div>
+      <div class="checkbox mb-4">
+      </div>
+      <button style="background-color: #00CE7F; width: 300px;" class="btn btn btn" (click)="getUsers()"
+        fdprocessedid="5a0sq">Login</button>
+    </form>
+
+  </div>
+</div>
+
