--- a/src/app/schadenberichte/schadenberichte.component.html
+++ b/src/app/schadenberichte/schadenberichte.component.html
@@ -1,39 +1,52 @@
-<p>Schadenberichte</p>
-<button style="background-color: red;"
-class="w-10 btn btn-lg btn-primary" type="submit" fdprocessedid="5a0sq" (click)="getUser()" >+Schadenfall</button> 
-<div class="row mb-3 text-center">
-    <table style="width:50%">
-    
-    <ul class="users">
-        <li *ngFor="let user of users">
-            <div class="row mb-3 text-center">
-                <div class="col-4 themed-grid-col">ID</div>
-                <div class="col-4 themed-grid-col">Name</div>
-                <div class="col-4 themed-grid-col">Status</div>
-                <hr>
-                <div class="col-4 themed-grid-col">{{user.id}} <a routerLink="/detail/{{user.id}}"></a></div>
-                <div class="col-4 themed-grid-col">{{user.name}}</div>
-                <div class="col-4 themed-grid-col">{{user.status}}</div>
-                <div class="col-4 themed-grid-col">{{user.erstellen}}</div>
-                <div class="col-4 themed-grid-col">{{user.email}}</div>
-              </div>
-          
-        </li>
-    </ul>
-         
-</table>
+<div class="container-fluid p-5 mb-5" style="height: 70px">
+  <nav class="navbar navbar-expand-md fixed-top">
+      <div class="container-fluid" style="background-color: #00CE7F">
+          <img class=" align-content-center mt-3 mb-3" src="/assets/logo_damagify_text.png" alt="" height="40">
+          <h6 style="color:aliceblue">Übersicht</h6>
+          <button style="background-color: whitesmoke; color:black; height: 35px;" class="btn btn" routerLink="/login"
+       >LOGOUT</button>
+      </div>
+  </nav>
 </div>
 
-<ul class="users">
-    <li *ngFor="let user of users">
-      <a routerLink="/detail/{{user.id}}">
-        <span class="badge">{{user.id}}</span>
-        <span class="">{{user.name}}</span>,
-        <span class="">{{user.status}}</span>,
-        <span class="">{{user.erstellen}}</span>,
-        <span class="">{{user.email}}</span>
-      </a>
-      
-        <button type="button" class="delete" title="delete user" >x</button>
-    </li>
-</ul>
+<div class="container mt-5 m-4">
+ 
+
+<div class="border border-secondary" >
+ 
+  <p class="mt-3 m-3">
+    Übersicht Schadenberichte
+    <button style="background-color: rgb(228, 80, 107);"
+       class="btn" (click)="navigateTo()">+Schadenfall</button>
+  </p>
+  <table mat-table [dataSource]="dataSource" >
+    <!-- Position Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>FAll ID </th>
+      <td style="color: rgb(228, 80, 107);" mat-cell *matCellDef="let user"> {{user.id}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>OBJECKBEZEICHNUNG</th>
+      <td mat-cell *matCellDef="let user"> {{user.objektBezeichung}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="objektBezeichung">
+      <th mat-header-cell *matHeaderCellDef> STATUS </th>
+      <td mat-cell *matCellDef="let user" appColor="user.status" > {{user.status}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> ERSTELLERN </th>
+      <td mat-cell *matCellDef="let user"> {{user.name}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+
+</div>
